syntax = "proto3";
package acl;

service Acl {
    rpc CheckAuth(Empty) returns (AuthStatus);
    rpc SignInAsService(Empty) returns (AuthDetails);
}

message AuthStatus {
    bool is_auth = 1;
    string sub = 2;
}

message Empty {}

message AuthDetails {
    string token = 1;
}
